--- a/packages_parameters.ipynb
+++ b/packages_parameters.ipynb
@@ -25,7 +25,7 @@
     "from scipy import stats\n",
     "from scipy import signal\n",
     "import time\n",
-    "import imp\n",
+    "import importlib\n",
     "import h5py\n",
     "import fl\n",
     "import warnings\n",
@@ -92,7 +92,7 @@
     "\n",
     "\n",
     "\n",
-    "imp.reload(fl)\n",
+    "importlib.reload(fl)\n",
     "%matplotlib inline\n",
     "warnings.simplefilter(action = \"ignore\", category = FutureWarning)"
    ]
@@ -123,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
